--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
+    "react-leaflet-draw": "^0.19.7",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
