--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-leaflet-draw": "^0.19.7",
+    "react-modal": "^3.13.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
