--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-leaflet-draw": "^0.19.7",
