--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
+    "nock": "^13.0.11",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
